sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:7: error: not found: value echanger
    echanger=false;
    ^AlgBubbleSort1:11: error: not found: value echanger
        echanger=true;
        ^AlgBubbleSort1:15: error: not found: value echanger
  }  while (echanger)
            ^